# ethos-ares

./: README.md  pyproject.toml
notebooks/: all_task_label_dump.ipynb  ed.ipynb  ed_task_label_mismatch_analysis.ipynb  figures.ipynb
scripts/meds/: requirements.txt  run_mimic.sh
scripts/meds/mimic/: pre_MEDS.py
scripts/meds/mimic/configs/: event_configs-ed.yaml  extract_MIMIC.yaml
src/ethos/: metrics.py
src/ethos/datasets/: base.py  ed.py
src/ethos/inference/: utils.py
src/ethos/tokenize/mimic/: preprocessors.py
src/ethos/train/: metrics.py  run_training.py
